# async-events-emitter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: event.rs  event_emitter.rs  lib.rs  listener.rs
