[package]
name = "async-events-emitter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Library providing an implementation of an event handling system"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
dashmap = "5.5.3"
tokio = { version = "1", features = ["full"] }
